# bookmanagmentbot

./: .gitignore  README.md  bot.py  config.example.toml  config.py  pyproject.toml
migrations/: env.py
migrations/versions/: 04c4d14dfb50_init.py  cd929727a408_init.py  dbff181a83f1_init.py
src/database/: __init__.py
src/database/models/: book.py
src/database/repositories/: __init__.py  book.py
src/database/services/: book.py
src/dialogs/: setup.py
src/dialogs/add_book/: __init__.py  dialogs.py  getters.py  handlers.py
src/dialogs/all_books/: __init__.py  dialog.py  getters.py  handlers.py
src/dialogs/base/: __init__.py  cancel.py  paginator.py
src/dialogs/delete_book/: __init__.py  dialog.py  getters.py  handlers.py
src/dialogs/search_book/: __init__.py  dialog.py  getters.py  handlers.py
src/handlers/user/: __init__.py  add_new.py  all_books.py  delete_book.py  search_book.py  start.py
src/keyboards/: start.py
src/middlewares/: database.py
src/states/: book.py
