[tool.poetry]
name = "lolztask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.5.0"
aiogram-dialog = "^2.1.0"
toml = "^0.10.2"
SQLAlchemy = "^2.0.29"
aiosqlite = "^0.20.0"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
